--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "livereload": "wtch -d . -e html,css,png,gif,jpg | garnish --level debug",
     "static": "ecstatic-lr .",
     "start": "npm-run-all -p watch livereload static",
-    "dist": "mkdir -p dist && bash -c 'cp -r *.{js,html,css,jpg} garden screenshots dist'",
+    "dist": "mkdir -p dist && bash -c 'cp -r *.{js,html,css} images dist'",
     "push": "gh-pages -d dist",
     "deploy": "npm-run-all -s dist build push"
   },
